--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "repl": "nest start --watch --entryFile repl"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -27,8 +28,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.7",
+    "@nestjs/swagger": "^7.1.15",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.2.7",
+    "@types/multer": "^1.4.10",
     "@types/nodemailer": "^6.4.13",
     "@types/qrcode": "^1.5.4",
     "class-transformer": "^0.5.1",
