--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/qrcode": "^1.5.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.10",
     "mysql2": "^3.6.3",
     "nodemailer": "^6.9.7",
     "qrcode": "^1.5.3",
